--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
+    "objects-to-csv": "^1.3.6",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
@@ -38,6 +39,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.0",
+    "@types/objects-to-csv": "^1.3.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
